--- a/templates/login.html
+++ b/templates/login.html
@@ -91,7 +91,7 @@
 
 <div class="container-fluid login-container">
     <div class="logo-container text-center mb-4">
-        <img src="logo.jpg" alt="Pune Seva Logo" class="img-fluid" style="max-width: 150px;">
+        <img src="{{ url_for('static', filename='logo.jpg') }}" alt="Pune Seva Logo" class="img-fluid" style="max-width: 150px;">
     </div>
     <div class="row g-0 w-100">
         <!-- Image Side -->
